# manim-reels-youtube

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  skills.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/manim-reel/: SKILL.md
examples/: harness-ai-agents.json
reelgen/: __init__.py  __main__.py  components.py  config.py  layout.py  mux.py  pipeline.py  scene.py  storyboard.py  timing.py  tts.py
skills/manim-reel/: SKILL.md
skills/manim-reel/reference/: schema.md
storyboards/: gemini-cli.json
tests/: test_config.py  test_layout.py  test_storyboard.py  test_timing.py  test_tts.py
